--- a/app/src/main/res/drawable/custom_button_login.xml
+++ b/app/src/main/res/drawable/custom_button_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
+<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#FA89a7"/>
-</selector>
+    <solid android:color="@color/back_blue"/>
+    <corners android:radius="20dp"/>
+</shape>
