--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
         android:layout_marginTop="300dp"
         android:text="login"
         android:textColor="#FFFFFF"
-        android:textSize="40sp"
+        android:textSize="35sp"
         app:fontFamily="@font/montserrat_bold"
         app:textAllCaps="true" />
 
@@ -42,19 +42,32 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textViewLogin"
         android:hint="@string/prompt_username"
+        android:background="@drawable/custom_input"
+        android:padding="8dp"
+        android:gravity="center"
+        app:fontFamily="@font/montserrat"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:layout_marginTop="60dp"
         android:id="@+id/editText_login_username"/>
+
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText_login_username"
         android:hint="@string/prompt_password"
+        android:background="@drawable/custom_input"
+        android:padding="8dp"
+        android:gravity="center"
+        app:fontFamily="@font/montserrat"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:id="@+id/editText_login_password"/>
 
 
@@ -70,18 +83,24 @@
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:fontFamily="@font/montserrat"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_login"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/custom_button_login"
         android:layout_below="@+id/textView_login_forgotpassword"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:text="Login" />
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:text="Login"
+        app:fontFamily="@font/montserrat"
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/textView_hyperlink_signup"
@@ -93,5 +112,6 @@
         android:layout_marginTop="15dp"
         android:text="Sign Up"
         android:textColor="@android:color/white"
-        android:textSize="18sp" />
+        app:fontFamily="@font/montserrat"
+        android:textSize="16sp" />
 </RelativeLayout>
