--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="base_blue">#0019F8</color>
+    <color name="back_blue">#06091A</color>
+    <color name="gray_500">#339B9B9B</color>
+
 </resources>
