Updated Login Screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="back_blue">#06091A</color>
     <color name="gray_500">#339B9B9B</color>
 
+    <!-- Login -->
+    <color name="white_text">#FFFFFFFF</color>
+
 </resources>
