Updated Login Screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <!-- Lesson List -->
     <color name="background_main">#FF06091A</color>
 
+    <color name="background_login">#FF0019F8</color>
+
 </resources>
