--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,168 +4,185 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#06091A"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="visible">
 
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="match_parent"
-            android:layout_height="89dp"
-            android:src="@drawable/logo_marca_robii_ofc"
-            app:layout_constraintBottom_toTopOf="@id/rectangleContainer"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
-
-        <ImageView
-            android:id="@+id/rectangleContainer"
-            android:layout_width="match_parent"
-            android:layout_height="580dp"
-            android:src="@drawable/rectangle_login"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:contentDescription="@string/contentDescription_login_logo"
+        android:src="@drawable/logo_marca_robii_ofc"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.27"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/LL_Login"
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_height="0dp"
+        android:background="@drawable/rectangle_login_shape"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="@id/rectangleContainer"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        >
+        app:layout_constraintHeight_percent="0.73"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
-            android:id="@+id/textViewLogin"
-            style="@style/Widget.AppCompat.TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Login"
-            android:textColor="#FFFFFF"
-            android:textSize="32sp"
-            app:fontFamily="@font/montserrat_bold"
-            android:layout_marginTop="100dp"
-            app:layout_constraintBottom_toTopOf="@id/editText_login_username"
-            app:layout_constraintEnd_toEndOf="@id/rectangleContainer"
-            app:layout_constraintStart_toStartOf="@id/rectangleContainer"
-            app:layout_constraintTop_toTopOf="@id/rectangleContainer" />
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/LL_Credentials"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/LL_Login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        >
-
-        <EditText
-            android:id="@+id/editText_login_username"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/LL_Login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="60dp"
-            android:background="@drawable/custom_input"
-            android:gravity="center"
-            android:hint="@string/prompt_username"
-            android:textColorHint="@color/white"
-            android:padding="8dp"
-            android:textSize="20sp"
-            app:fontFamily="@font/montserrat"
-            app:layout_constraintBottom_toTopOf="@id/editText_login_password"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewLogin" />
+            android:gravity="center_horizontal">
+
+            <TextView
+                android:id="@+id/textViewLogin"
+                style="@style/Widget.AppCompat.TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:text="@string/login"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="32sp"
+                app:fontFamily="@font/montserrat_bold" />
 
 
-        <EditText
-            android:id="@+id/editText_login_password"
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/LL_Credentials"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="60dp"
-            android:background="@drawable/custom_input"
             android:gravity="center"
-            android:hint="@string/prompt_password"
-            android:textColorHint="@color/white"
-            android:padding="8dp"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            app:fontFamily="@font/montserrat"
-            app:layout_constraintBottom_toTopOf="@id/textView_login_forgotpassword"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/editText_login_username" />
+            app:layout_constraintTop_toBottomOf="@id/LL_Login">
 
 
-        <TextView
-            android:id="@+id/textView_login_forgotpassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/prompt_forgotpassword"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"
-            app:fontFamily="@font/montserrat"
-            android:layout_marginTop="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/editText_login_password" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:outlineProvider="none"
+                app:boxBackgroundMode="none"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginStart="40dp"
+                app:hintEnabled="false"
+                android:pointerIcon="text"
+                >
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+                <EditText
+                    android:id="@+id/editText_login_username"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:outlineProvider="none"
+                    android:background="@drawable/custom_input"
+                    android:gravity="center_vertical"
+
+                    android:autofillHints="username"
+                    android:hint="@string/prompt_username"
+                    android:textColorHint="@color/white"
+
+                    android:textColor="#FFFFFF"
+                    android:inputType="text"
+                    android:padding="8dp"
+                    android:textSize="20sp"
+                    app:fontFamily="@font/montserrat"
+
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:outlineProvider="none"
+                app:boxBackgroundMode="none"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/background_main"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                app:hintEnabled="false"
+                android:pointerIcon="text"
+                >
+
+                <EditText
+                    android:id="@+id/editText_login_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:hint="@string/prompt_password"
+                    android:autofillHints="password"
+                    android:textColorHint="@color/white"
 
 
+                    android:background="@drawable/custom_input"
+                    android:gravity="center_vertical"
+                    android:inputType="textPassword"
+                    android:padding="8dp"
+                    android:textColor="#FFFFFF"
+                    android:textSize="20sp"
+                    app:fontFamily="@font/montserrat" />
 
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <TextView
+                android:id="@+id/textView_login_forgot_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/prompt_forgot_password"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                app:fontFamily="@font/montserrat" />
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_marginTop="50dp"
             android:gravity="center"
-            android:layout_marginTop="60dp"
-            app:layout_constraintTop_toBottomOf="@id/LL_Credentials"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            >
+            app:layout_constraintTop_toBottomOf="@id/LL_Credentials">
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/button_login"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="60dp"
-                    android:layout_marginRight="60dp"
-                    android:background="@drawable/custom_button_login"
-                    android:text="Login"
-                    android:textSize="20sp"
-                    android:textColor="@color/white"
-                    app:fontFamily="@font/montserrat"
-                     />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="60dp"
+                android:background="@drawable/custom_button_login"
+                android:text="@string/button_login"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:fontFamily="@font/montserrat" />
 
-                <TextView
-                    android:id="@+id/textView_hyperlink_signup"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/text_view_signup"
-                    android:layout_marginTop="20dp"
-                    android:textColor="@android:color/white"
-                    android:textSize="20sp"
-                    app:fontFamily="@font/montserrat"
-                     />
+            <TextView
+                android:id="@+id/textView_hyperlink_signup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/text_view_signup"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                app:fontFamily="@font/montserrat" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
