--- a/app/src/main/res/layout/activity_template_dialog.xml
+++ b/app/src/main/res/layout/activity_template_dialog.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background_main">
 
 <ImageView
-    android:id="@+id/sequence_phrase1"
+    android:id="@+id/sequence_phrase"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@drawable/square_phases"
-    android:layout_marginTop="142dp"
+    android:layout_marginTop="70dp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
@@ -20,19 +19,28 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sequence_phrase1"
+        android:text="@string/sequence_phrase"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textAlignment="center"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:ems="13"
-        app:layout_constraintTop_toTopOf="@id/sequence_phrase1"
-        app:layout_constraintBottom_toBottomOf="@id/sequence_phrase1"
-        app:layout_constraintStart_toStartOf="@id/sequence_phrase1"
-        app:layout_constraintEnd_toEndOf="@id/sequence_phrase1"
+        app:layout_constraintTop_toTopOf="@id/sequence_phrase"
+        app:layout_constraintBottom_toBottomOf="@id/sequence_phrase"
+        app:layout_constraintStart_toStartOf="@id/sequence_phrase"
+        app:layout_constraintEnd_toEndOf="@id/sequence_phrase"
 
         />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/next_button"
+        app:layout_constraintTop_toBottomOf="@id/sequence_phrase"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
