--- a/app/src/main/res/layout/scrollview_itens.xml
+++ b/app/src/main/res/layout/scrollview_itens.xml
@@ -21,6 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:id="@+id/level_1"
                 android:layout_weight="1"
                 android:contentDescription="@string/SV_itens_number_1"
                 android:src="@drawable/white_ellipse1" />
@@ -41,6 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_2"
+                android:id="@+id/level_2"
                 android:src="@drawable/white_ellipse2" />
 
             <Space
@@ -53,6 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_3"
+                android:id="@+id/level_3"
                 android:src="@drawable/white_ellipse3" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -71,6 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_4"
+                android:id="@+id/level_4"
                 android:src="@drawable/white_ellipse4" />
 
             <Space
@@ -83,6 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_5"
+                android:id="@+id/level_5"
                 android:src="@drawable/white_ellipse5" />
 
 
@@ -102,6 +107,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_6"
+                android:id="@+id/level_6"
                 android:src="@drawable/white_ellipse6" />
 
             <Space
@@ -114,6 +120,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_7"
+                android:id="@+id/level_7"
                 android:src="@drawable/white_ellipse7" />
 
 
@@ -134,6 +141,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/SV_itens_number_8"
+                android:id="@+id/level_8"
                 android:src="@drawable/white_ellipse8" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
