--- a/app/src/main/res/drawable/phases_shape_rectangle.xml
+++ b/app/src/main/res/drawable/phases_shape_rectangle.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:width="5dp" android:color="@color/background_login" />
-    <solid android:color="@color/background_main"/>
     <corners android:topLeftRadius="32dp"
         android:topRightRadius="32dp"
         android:bottomLeftRadius="32dp"
         android:bottomRightRadius="32dp"/>
-
     <size android:width="375dp"
-        android:height="316dp"/>
+        android:height="316dp"
+        />
 </shape>
