--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/intersect_top"
+        android:src="@drawable/login_intersect_top"
         android:layout_alignParentTop="true"
         android:id="@+id/intersectTop"
         />
@@ -17,7 +17,7 @@
         android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/logo_marca_robii_ofc"
+        android:src="@drawable/logo_robii"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,6 +31,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="0dp"
-        android:src="@drawable/intersect_bottom" />
+        android:src="@drawable/login_intersect_bottom" />
 
 </RelativeLayout>
