--- a/app/src/main/res/layout/activity_template_dialog.xml
+++ b/app/src/main/res/layout/activity_template_dialog.xml
@@ -5,12 +5,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background_main">
 
+    <include layout="@layout/back_arrow"/>
+
+
 <ImageView
     android:id="@+id/sequence_phrase"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:src="@drawable/square_phases"
-    android:layout_marginTop="70dp"
+    android:src="@drawable/phases_shape_rectangle"
+    android:layout_marginTop="85dp"
+    android:layout_marginStart="25dp"
+    android:layout_marginEnd="25dp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
@@ -19,9 +24,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sequence_phrase"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="24sp"
+        android:autoSizeTextType="uniform"
         android:textAlignment="center"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
@@ -30,13 +36,12 @@
         app:layout_constraintBottom_toBottomOf="@id/sequence_phrase"
         app:layout_constraintStart_toStartOf="@id/sequence_phrase"
         app:layout_constraintEnd_toEndOf="@id/sequence_phrase"
-
         />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/next_button"
+        android:src="@drawable/phases_next_button"
         app:layout_constraintTop_toBottomOf="@id/sequence_phrase"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
