--- a/app/src/main/res/layout/scrollview_itens.xml
+++ b/app/src/main/res/layout/scrollview_itens.xml
@@ -23,7 +23,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:contentDescription="@string/SV_itens_number_1"
-                android:src="@drawable/white_ellipse1" />
+                android:src="@drawable/main_white_ellipse1" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_2"
-                android:src="@drawable/white_ellipse2" />
+                android:src="@drawable/main_white_ellipse2" />
 
             <Space
                 android:layout_width="45dp"
@@ -53,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_3"
-                android:src="@drawable/white_ellipse3" />
+                android:src="@drawable/main_white_ellipse3" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -71,7 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_4"
-                android:src="@drawable/white_ellipse4" />
+                android:src="@drawable/main_white_ellipse4" />
 
             <Space
                 android:layout_width="45dp"
@@ -83,7 +83,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_5"
-                android:src="@drawable/white_ellipse5" />
+                android:src="@drawable/main_white_ellipse5" />
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -102,7 +102,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_6"
-                android:src="@drawable/white_ellipse6" />
+                android:src="@drawable/main_white_ellipse6" />
 
             <Space
                 android:layout_width="45dp"
@@ -114,7 +114,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_7"
-                android:src="@drawable/white_ellipse7" />
+                android:src="@drawable/main_white_ellipse7" />
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -134,7 +134,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/SV_itens_number_8"
-                android:src="@drawable/white_ellipse8" />
+                android:src="@drawable/main_white_ellipse8" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
