--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,117 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#06091A"
     android:orientation="vertical">
 
-
     <ImageView
         android:id="@+id/logo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-
-        android:src="@drawable/logo_marca_robii_ofc"/>
-
-
-    <ImageView
-        android:id="@+id/rectangleContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/logo"
-        android:src="@drawable/rectangle_login" />
-
-    <TextView
-        android:id="@+id/textViewLogin"
-        style="@style/Widget.AppCompat.TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"
-        android:text="login"
-        android:textColor="#FFFFFF"
-        android:textSize="35sp"
-        app:fontFamily="@font/montserrat_bold"
-        app:textAllCaps="true" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewLogin"
-        android:hint="@string/prompt_username"
-        android:background="@drawable/custom_input"
-        android:padding="8dp"
-        android:gravity="center"
-        app:fontFamily="@font/montserrat"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="60dp"
-        android:id="@+id/editText_login_username"/>
-
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText_login_username"
-        android:hint="@string/prompt_password"
-        android:background="@drawable/custom_input"
-        android:padding="8dp"
-        android:gravity="center"
-        app:fontFamily="@font/montserrat"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="20dp"
-        android:id="@+id/editText_login_password"/>
-
-
-    <TextView
-        android:id="@+id/textView_login_forgotpassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText_login_password"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="15dp"
-        android:text="@string/prompt_forgotpassword"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
+        android:layout_height="0dp"
+        android:contentDescription="@string/contentDescription_login_logo"
+        android:src="@drawable/logo_robii"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:fontFamily="@font/montserrat"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.27"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_login"
+    <androidx.appcompat.widget.LinearLayoutCompat
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/custom_button_login"
-        android:layout_below="@+id/textView_login_forgotpassword"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:text="Login"
-        app:fontFamily="@font/montserrat"
-        android:textColor="@color/white"/>
+        android:layout_height="0dp"
+        android:background="@drawable/login_rectangle_shape"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.73"
+        app:layout_constraintStart_toStartOf="parent">
 
-    <TextView
-        android:id="@+id/textView_hyperlink_signup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button_login"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="15dp"
-        android:text="Sign Up"
-        android:textColor="@android:color/white"
-        app:fontFamily="@font/montserrat"
-        android:textSize="16sp" />
-</RelativeLayout>
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/LL_Login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal">
+
+            <TextView
+                android:id="@+id/textViewLogin"
+                style="@style/Widget.AppCompat.TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:text="@string/login"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="32sp"
+                app:fontFamily="@font/montserrat_bold" />
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/LL_Credentials"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/LL_Login">
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:outlineProvider="none"
+                app:boxBackgroundMode="none"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginStart="40dp"
+                app:hintEnabled="false"
+                android:pointerIcon="text"
+                >
+
+                <EditText
+                    android:id="@+id/editText_login_username"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:outlineProvider="none"
+                    android:background="@drawable/login_custom_input"
+                    android:gravity="center_vertical"
+
+                    android:autofillHints="username"
+                    android:hint="@string/prompt_username"
+                    android:textColorHint="@color/white"
+
+                    android:textColor="#FFFFFF"
+                    android:inputType="text"
+                    android:padding="8dp"
+                    android:textSize="20sp"
+                    app:fontFamily="@font/montserrat"
+
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:outlineProvider="none"
+                app:boxBackgroundMode="none"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/background_main"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                app:hintEnabled="false"
+                android:pointerIcon="text"
+                >
+
+                <EditText
+                    android:id="@+id/editText_login_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:hint="@string/prompt_password"
+                    android:autofillHints="password"
+                    android:textColorHint="@color/white"
+
+
+                    android:background="@drawable/login_custom_input"
+                    android:gravity="center_vertical"
+                    android:inputType="textPassword"
+                    android:padding="8dp"
+                    android:textColor="#FFFFFF"
+                    android:textSize="20sp"
+                    app:fontFamily="@font/montserrat" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <TextView
+                android:id="@+id/textView_login_forgot_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/prompt_forgot_password"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                app:fontFamily="@font/montserrat" />
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/LL_Credentials">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="60dp"
+                android:background="@drawable/login_custom_button"
+                android:text="@string/button_login"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:fontFamily="@font/montserrat" />
+
+            <TextView
+                android:id="@+id/textView_hyperlink_signup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/text_view_signup"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                app:fontFamily="@font/montserrat" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
