--- a/app/src/main/res/layout/scrollview_itens.xml
+++ b/app/src/main/res/layout/scrollview_itens.xml
@@ -15,6 +15,7 @@
             android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
+
             android:orientation="vertical">
 
             <ImageView
@@ -22,6 +23,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:id="@+id/level_1"
                 android:contentDescription="@string/SV_itens_number_1"
                 android:src="@drawable/main_white_ellipse1" />
 
@@ -41,6 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_2"
+                android:id="@+id/level_2"
                 android:src="@drawable/main_white_ellipse2" />
 
             <Space
@@ -53,6 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_3"
+                android:id="@+id/level_3"
                 android:src="@drawable/main_white_ellipse3" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -71,6 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_4"
+                android:id="@+id/level_4"
                 android:src="@drawable/main_white_ellipse4" />
 
             <Space
@@ -83,6 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_5"
+                android:id="@+id/level_5"
                 android:src="@drawable/main_white_ellipse5" />
 
 
@@ -95,6 +101,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="10dp"
+
             android:orientation="horizontal">
 
 
@@ -102,6 +109,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_6"
+                android:id="@+id/level_6"
                 android:src="@drawable/main_white_ellipse6" />
 
             <Space
@@ -114,6 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/SV_itens_number_7"
+                android:id="@+id/level_7"
                 android:src="@drawable/main_white_ellipse7" />
 
 
@@ -134,6 +143,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/SV_itens_number_8"
+                android:id="@+id/level_8"
                 android:src="@drawable/main_white_ellipse8" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
